--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      media="sreen and (min-width: 1100px"
+      media="sreen and (min-width: 1100px)"
       href="css/widescreen.css"
     />
    
@@ -34,7 +34,7 @@
     <!-- Header: Showcase -->
     <header id="showcase">
       <div class="showcase-content">
-        <h1 class="l-heading">Ojedele, Samuel T.</h1>
+        <h1 class="l-heading" data-text="Ojedele, Samuel T.">Ojedele, Samuel T.</h1>
         <p class="lead">Backend Software Developer</p>
       </div>
     </header>
@@ -104,5 +104,67 @@
         </ul>
       </div>
     </section>
+
+    <section id="Contact">
+      <div class="who-text bg-light p-2">
+        <h2 class="m-heading"><span class="text-primary">Contact</span> Me</h3>
+        <p>
+          For more information on website development, website management, e.t.c. Please, send me a message by filling the form on the right, call the telephone number below or email me, and follow me on the various social media platform (by clicking on the images/icons) below.
+        </p>
+        <p>
+          Email: samuelojedele2003@gmial.com<br>
+          Tel: 07055440792
+        </p>
+        <p>
+          <a href="https://github.com/samuelojedele" target="_blank"
+        ><img src="github.jpeg" alt="Github link" /></a
+      ><span></span><span></span>
+      <a
+        href="https://www.linkedin.com/in/samuel-ojedele-1b61a922a/"
+        target="_blank"
+        ><img src="linkedin.png" alt="LinkedIn link" /></a
+      ><span></span><span></span><span></span>
+      <a href="https://twitter.com/SamuelOjedele" target="_blank"
+        ><img src="twitter.png" alt="twitter link"
+      /></a>
+        </p>
+      </div>
+      <div id="form">
+        <form>
+          <p>
+            <input id="input" type="text" placeholder="Surname" required /><br>
+          </p>
+          <p>
+            <input id="input" type="text" placeholder="First Name" required /><br />
+          </p>
+          <p>
+            <input id="input" type="email" placeholder="Email" required /><br>
+          </p>
+          <p>
+            <input id="input" type="tel" placeholder="Tel" required /><br />
+          </p>
+          <textarea id="input" name="message"placeholder="Write your message here!"  rows="10" cols="48"></textarea>
+            </textarea
+          ><br />
+          <p>
+            <button
+              id="input"
+              type="submit"
+              onclick="alert('Please ensure you fill the form correctly. Thank you!')"
+              value="submit"
+            >
+              Send
+            </button>
+          </p>
+        </form>
+      </div>
+    </section>
+    <footer class="bg-dark text-center py-1">
+      <div class="container">
+        <p>Copyright &copy 2022, Sammy Smart, All Rights Reserved </p>
+      </div>
+    </footer>
+
+    </footer>
   </body>
 </html>
